Fixed radio button overspill, general formatting, checkbox layout improved

--- a/qa-portal-angular/projects/qa-forms/src/app/controls/radio-button/radio-button.component.css
+++ b/qa-portal-angular/projects/qa-forms/src/app/controls/radio-button/radio-button.component.css
@@ -5,14 +5,16 @@
 }
 
 .qa-radio-btn-grp-label {
-  background-color: lightgrey;
-  color: black;
+  background-color: #004050;
+  color: white;
   font-size: 14px;
   margin-bottom: 10px;
+  padding: 10px;
+  text-align: center;
 }
 
 .qa-radio-btn-layout-horizontal {
-  display: flex;
+  text-align: center;
   flex-direction: row;
   justify-content: center;
   margin-bottom: 5px;
